updated pi numbers

--- a/Lab_4/cvmct/pinet.cfg
+++ b/Lab_4/cvmct/pinet.cfg
@@ -17,7 +17,7 @@ CAMDIR=/dev/shm/pinetjpg0/
 
 # 
 # broker-listen-port on client, must be < (CLIENTPORTBASE -1)
-BROKERPORT=31003
+BROKERPORT=31004
 #rem ( $BROKERPORT + 1 ) is reserved for temp. jpg-list-file-receive
 #
 # ncat cmd listen-port on remote server pool 
@@ -36,7 +36,7 @@ IPBASE="192.168.93" # for "/24" network
 # PIPOOL=( {1..6} {8..20} 22 )
 
 # Azeez Test 2025
-PIPOOL=( 3 4 6 36 40 41 42 43 )
+PIPOOL=( 3 4 6 36 40 41 42 43b 10 11 14 16 47 46 48 5 17 35 19 20)
 
 # 2018:
 # PIPOOL=( {31..50} )
