--- a/Lab_4/cvmct/pinet-server.cfg
+++ b/Lab_4/cvmct/pinet-server.cfg
@@ -1,7 +1,7 @@
 #!/bin/bash
 #PINAME_=cvpi
 #IPBASE="192.168.93"
-PIPOOL=( 3 4 6 36 40 41 42 43 )
-PIPOOLIPSUFFIX=( 64 77 109 161 181 199 207 204 )
-#Found Raspberry Pi devices: 8
-#Matched Raspberry Pis: 8
+PIPOOL=( 3 4 6 36 40 41 42 43b 10 11 14 16 47 46 48 5 17 35 19 20 )
+PIPOOLIPSUFFIX=( 14 17 61 64 67 77 82 87 98 103 109 130 149 161 181 186 198 199 207 204 )
+#Found Raspberry Pi devices: 20
+#Matched Raspberry Pis: 20
